# Testing

./: CMakeLists.txt  main.cpp
builder/: TestBuilder.cpp  TestBuilder.h
domain/: Auction.cpp  Auction.h  Bid.cpp  Bid.h  EmailSender.cpp  EmailSender.h  Payment.cpp  Payment.h  User.cpp  User.h
lib/googletest-master/googlemock/include/gmock/: gmock-generated-function-mockers.h  gmock-matchers.h
lib/googletest-master/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h  gtest-string.h
lib/googletest-master/googletest/src/: gtest-internal-inl.h  gtest-port.cc  gtest.cc
persistence/: AuctionDAO.cpp  AuctionDAO.h  FakeAuctionDAO.cpp  FakeAuctionDAO.h  PaymentRepository.cpp  PaymentRepository.h
service/: Evaluator.cpp  Evaluator.h  Finisher.cpp  Finisher.h  PaymentGenerator.cpp  PaymentGenerator.h
